# BetterMenuMod

./: BETTERMENU.GeodeFuck  CMakeLists.txt  README.md  about.md  changelog.md  mod.json  support.md
.github/workflows/: build.yml
src/: GJGarageLayer.cpp  LoadingMenu.cpp  Settings.cpp  Settings.hpp  main.cpp  menu.cpp
src/ModLayers/LoadingLayer/: ModifyFiles.hpp  main.cpp
src/ModLayers/MenuLayer/: FunctionLoader.cpp  ModifyFiles.hpp
src/ModLayers/MenuLayer/ModifyHooks/: MenuManipulation.hpp  Shortcuts.hpp  addbuttons.hpp  compact.hpp  hideshow.hpp  jokesettings.hpp
src/ModLayers/ModLayerPatches/: Youtube.cpp  menulayer.hpp
src/ModLayers/Settings/: Settings.cpp  Settings.hpp
src/ModLayers/SwelvyBG/: SwelvyBG.cpp  geodeModLayerBackground.hpp
src/old/: LoadingMenu.txt
